k8s/ping_service.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ping-pod
  namespace: disperser-v2
  labels:
    app: ping-app
spec:
  containers:
  - image: ghcr.io/pschork/pingpong/ping:latest
    imagePullPolicy: Always
    name: ping-container
    ports:
      - containerPort: 50051
      - containerPort: 50061
    livenessProbe:
      httpGet:
        path: /healthz  # Specify the path for health check
        port: 50061      # Use the healthPort defined above
      initialDelaySeconds: 1
      periodSeconds: 10
  restartPolicy: Always
  tolerations:
    - key: "disperser-v2"
      operator: "Equal"
      value: "1"
      effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
  namespace: disperser-v2
spec:
  selector:
    app: ping-app
  ports:
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
  - protocol: TCP
    name: health
    port: 50061
    targetPort: 50061
  type: ClusterIP
